unpackaged/main/default/objects/Account/fields/Naming_Rights__c.field-meta.xml
<CustomField>
    <fullName>Naming_Rights__c</fullName>
    <label>Naming Rights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Naming Rights</fullName>
            </value>
            <value>
                <fullName>Earnings Call Only</fullName>
            </value>
            <value>
                <fullName>No Rights/Custom Language</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Yes with Consent</fullName>
                <isActive>false</isActive>
                <label>Yes with Consent</label>
            </value>
            <value>
                <fullName>Yes with Restriction</fullName>
                <isActive>false</isActive>
                <label>Yes with Restriction</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>