unpackaged/main/default/objects/Account/fields/Naming_Rights_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Naming_Rights_Last_Updated__c</fullName>
    <description>Date the field &quot;Naming Rights&quot; was last updated to a different value</description>
    <inlineHelpText>Date the field &quot;Naming Rights&quot; was last updated to a different value</inlineHelpText>
    <label>Naming Rights - Last Updated</label>
    <type>Date</type>
</CustomField>