unpackaged/main/default/objects/Account/fields/NumberOfOpenCases__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpenCases__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NumberOfOpenCases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>