unpackaged/main/default/objects/Account/fields/of_YouTube_followers__c.field-meta.xml
<CustomField>
    <fullName>of_YouTube_followers__c</fullName>
    <label># of YouTube followers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-99</fullName>
            </value>
            <value>
                <fullName>100-499</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>1,000-9,999</fullName>
            </value>
            <value>
                <fullName>10,000-99,999</fullName>
            </value>
            <value>
                <fullName>100,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>