unpackaged/main/default/objects/Account/fields/of_YouTube_Videos__c.field-meta.xml
<CustomField>
    <fullName>of_YouTube_Videos__c</fullName>
    <label># of YouTube Videos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-49</fullName>
            </value>
            <value>
                <fullName>50-199</fullName>
            </value>
            <value>
                <fullName>200-499</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>1,000-9,999</fullName>
            </value>
            <value>
                <fullName>10,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>