unpackaged/main/default/objects/Account/fields/Opportunities_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Closed_Won__c</fullName>
    <label>Opportunities Closed Won</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>