unpackaged/main/default/objects/Account/fields/Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>Partner_Category__c</fullName>
    <label>Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>AI &amp; Video Enrichment</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>App Development</fullName>
            </value>
            <value>
                <fullName>Audience Measurement</fullName>
            </value>
            <value>
                <fullName>Broadcasting solution</fullName>
            </value>
            <value>
                <fullName>Cloud Storage</fullName>
            </value>
            <value>
                <fullName>Consent Management</fullName>
            </value>
            <value>
                <fullName>Consulting company</fullName>
            </value>
            <value>
                <fullName>Content and Social Syndication</fullName>
            </value>
            <value>
                <fullName>Content Management System</fullName>
            </value>
            <value>
                <fullName>Digital Agency</fullName>
            </value>
            <value>
                <fullName>DRM and Content Protection</fullName>
            </value>
            <value>
                <fullName>eCommerce Platform</fullName>
            </value>
            <value>
                <fullName>eLearning Solutions</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Delivery</fullName>
            </value>
            <value>
                <fullName>Event Management Platform</fullName>
            </value>
            <value>
                <fullName>FAST</fullName>
            </value>
            <value>
                <fullName>Global Systems Integrator</fullName>
            </value>
            <value>
                <fullName>Interactive Video</fullName>
            </value>
            <value>
                <fullName>IT Services Company</fullName>
            </value>
            <value>
                <fullName>Live Streaming Hardware/Software/Services</fullName>
            </value>
            <value>
                <fullName>MAP</fullName>
            </value>
            <value>
                <fullName>Marketing Agency</fullName>
            </value>
            <value>
                <fullName>Marketing Automation Platform</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>OTT Platforms and Extensions</fullName>
            </value>
            <value>
                <fullName>Paywall and Payment Gateways</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
            <value>
                <fullName>Social Media Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>