unpackaged/main/default/objects/Account/fields/Partner_Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contract_URL__c</fullName>
    <description>Link to the most recent partner contract usually in the Legal folder on the corporate Google Drive</description>
    <label>Partner Contract URL</label>
    <type>Url</type>
</CustomField>