unpackaged/main/default/objects/Account/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <label>Marketplace Partner Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace Contact Us Form</fullName>
                <default>true</default>
                <label>Marketplace Contact Us Form</label>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Sales Request</fullName>
            </value>
            <value>
                <fullName>Product Request</fullName>
            </value>
            <value>
                <fullName>Mutual Partner Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>