unpackaged/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace Partner</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>