unpackaged/main/default/objects/Account/fields/Partner_Type_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type_From_Lead__c</fullName>
    <label>Partner Type From Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Partner lead</fullName>
            </value>
            <value>
                <fullName>Partner - Referral</fullName>
            </value>
            <value>
                <fullName>Partner - Resell</fullName>
            </value>
            <value>
                <fullName>Solution Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>