unpackaged/main/default/objects/Account/fields/Pending_Hierarchy_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Hierarchy_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Hierarchy Review</label>
    <type>Checkbox</type>
</CustomField>