unpackaged/main/default/objects/Account/fields/Pending_Merge_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Merge_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used by the SFDC Team during the instance migration to facilitate merging of account records.  When multiple Customer Accounts with an Account Stage of &quot;Customer&quot; are identified, the business will need to review to determine the primary record for merging.  Setting this value to true will skip any affected records during the scheduled merge process.</description>
    <label>Pending Merge Review</label>
    <type>Checkbox</type>
</CustomField>