unpackaged/main/default/objects/Account/fields/Platinum_Alerts_Active__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Alerts_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platinum Alerts Active</label>
    <type>Checkbox</type>
</CustomField>