unpackaged/main/default/objects/Account/fields/Platinum_Date_of_Last_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Date_of_Last_Meeting__c</fullName>
    <label>Platinum Date of Last Meeting</label>
    <type>Date</type>
</CustomField>