unpackaged/main/default/objects/Account/fields/Platinum_Meetings_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Meetings_Frequency__c</fullName>
    <label>Platinum Meetings Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
                <default>true</default>
                <label>TBD</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>