unpackaged/main/default/objects/Account/fields/Platinum_Monthly_Hours_spent__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Monthly_Hours_spent__c</fullName>
    <label>Platinum Monthly Hours spent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>