unpackaged/main/default/objects/Account/fields/Platinum_Report_Needed__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Report_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platinum Report Needed</label>
    <type>Checkbox</type>
</CustomField>