unpackaged/main/default/objects/Account/fields/Platinum_TS_Manager__c.field-meta.xml
<CustomField>
    <fullName>Platinum_TS_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Platinum manager</description>
    <label>Platinum TS Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>