unpackaged/main/default/objects/Account/fields/Potentially_NSFW__c.field-meta.xml
<CustomField>
    <fullName>Potentially_NSFW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potentially NSFW</label>
    <type>Checkbox</type>
</CustomField>