unpackaged/main/default/objects/Account/fields/Primary_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Owner_Email__c</fullName>
    <label>Primary Account Owner Email</label>
    <type>Email</type>
</CustomField>