unpackaged/main/default/objects/Account/fields/Primary_Secondary_Use_Case_Last_update__c.field-meta.xml
<CustomField>
    <fullName>Primary_Secondary_Use_Case_Last_update__c</fullName>
    <description>It refers to the Primary Use Case or Secondary Use Case fields. When one of the is updated on the account level, it updates the date and time value of this field.</description>
    <label>Primary-Secondary Use Case Last update</label>
    <type>DateTime</type>
</CustomField>