unpackaged/main/default/objects/Account/fields/Primary_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Primary_Use_Case__c</fullName>
    <description>The main use case we will market to this account</description>
    <label>Primary Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full-service OTT</fullName>
            </value>
            <value>
                <fullName>Streaming Back-end</fullName>
            </value>
            <value>
                <fullName>Web/Mobile Publishing</fullName>
            </value>
            <value>
                <fullName>Analytics &amp; Insights</fullName>
            </value>
            <value>
                <fullName>Internal Comms</fullName>
            </value>
            <value>
                <fullName>External Comms</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Bespoke Products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>