unpackaged/main/default/objects/Account/fields/Reporting_account_counter__c.field-meta.xml
<CustomField>
    <fullName>Reporting_account_counter__c</fullName>
    <description>Used to get total # accounts in group by account reports.

https://success.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F9300000001pFV&amp;fId=0D53000001GwrJW</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to get total # accounts in group by account reports.

https://success.salesforce.com/_ui/core/chatter/groups/GroupProfilePage?g=0F9300000001pFV&amp;fId=0D53000001GwrJW</inlineHelpText>
    <label>Reporting account counter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>