unpackaged/main/default/objects/Account/fields/Sales_Division_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division_2__c</fullName>
    <description>Brightcove Sales Division that by default owns the account based on its geographic location</description>
    <inlineHelpText>Brightcove Sales Division that by default owns the account based on its geographic location</inlineHelpText>
    <label>Sales Division 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>