unpackaged/main/default/objects/Account/fields/Sales_Division__c.field-meta.xml
<CustomField>
    <fullName>Sales_Division__c</fullName>
    <label>Sales Division</label>
    <length>25</length>
    <type>Text</type>
</CustomField>