unpackaged/main/default/objects/Account/fields/Secondary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Industry__c</fullName>
    <label>Secondary Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Automobiles &amp; Parts</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Boutique Design &amp; Development Shops</fullName>
            </value>
            <value>
                <fullName>Broadcasters &amp; Cable Networks</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Materials</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Consumer Travel</fullName>
            </value>
            <value>
                <fullName>Content Aggregators</fullName>
            </value>
            <value>
                <fullName>Crowdfunding</fullName>
            </value>
            <value>
                <fullName>Cultural Organizations</fullName>
            </value>
            <value>
                <fullName>Design &amp; Marketing Agencies</fullName>
            </value>
            <value>
                <fullName>E-Learning</fullName>
            </value>
            <value>
                <fullName>Electricity</fullName>
            </value>
            <value>
                <fullName>Faith-based</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Film Studios</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Food &amp; Drug Retailers</fullName>
            </value>
            <value>
                <fullName>Gaming &amp; eSports</fullName>
            </value>
            <value>
                <fullName>Gas, Water &amp; Multiutilities</fullName>
            </value>
            <value>
                <fullName>General Retailers</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Hospitals &amp; Medical Services</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>HR &amp; Staffing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>