unpackaged/main/default/objects/Account/fields/Send_to_ERP__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to ERP</label>
    <type>Checkbox</type>
</CustomField>