unpackaged/main/default/objects/Account/fields/SFDC_Memo__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Memo__c</fullName>
    <description>SFDC Admin Notes</description>
    <inlineHelpText>SFDC Admin Notes</inlineHelpText>
    <label>SFDC Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>