unpackaged/main/default/objects/Account/fields/Stage_New__c.field-meta.xml
<CustomField>
    <fullName>Stage_New__c</fullName>
    <formula>CASE(Account_Stage__c  , &quot;Customer&quot;, &quot;Customer-Premium&quot;,&quot;Prospect&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage New</label>
    <type>Text</type>
</CustomField>