unpackaged/main/default/objects/Account/fields/Support_Slack_Channel_Auto_Creation__c.field-meta.xml
<CustomField>
    <fullName>Support_Slack_Channel_Auto_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Slack Channel Auto Creation</label>
    <type>Checkbox</type>
</CustomField>