unpackaged/main/default/objects/Account/fields/Target_Account_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Date__c</fullName>
    <description>Date when the account was last tagged as a target account</description>
    <inlineHelpText>Date when the account was last tagged as a target account</inlineHelpText>
    <label>Target Account Date</label>
    <type>Date</type>
</CustomField>