unpackaged/main/default/objects/Account/fields/Target_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Tier__c</fullName>
    <description>Identifies target accounts in multiple tiers.</description>
    <label>Target Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>