unpackaged/main/default/objects/Account/fields/Total_Live_Event_Support_hours_available__c.field-meta.xml
<CustomField>
    <fullName>Total_Live_Event_Support_hours_available__c</fullName>
    <formula>Total_Live_Event_Support_hours_sold__c - Total_Live_Event_Support_hours_booked__c - Live_Event_Support_Hours_used__c + Manual_Live_Event_Support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Live Event Support Hours available</inlineHelpText>
    <label>Total Live Event Support hours available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>