unpackaged/main/default/objects/Account/fields/Total_Live_Event_Support_hours_booked__c.field-meta.xml
<CustomField>
    <fullName>Total_Live_Event_Support_hours_booked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Live Event Support hours booked</description>
    <inlineHelpText>Total Live Event Support Hours requested and pending coverage assignment.</inlineHelpText>
    <label>Total Live Event Support hours booked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>