unpackaged/main/default/objects/Account/fields/Total_Live_Event_Support_hours_sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Live_Event_Support_hours_sold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Live Event Support hours sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>