unpackaged/main/default/objects/Account/fields/Total_Live_Support_Events__c.field-meta.xml
<CustomField>
    <fullName>Total_Live_Support_Events__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of Live Events done with the Support</inlineHelpText>
    <label>Total Live Support Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>