unpackaged/main/default/objects/Account/fields/Total_Remaining_Hours_to__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Hours_to__c</fullName>
    <inlineHelpText>The Live Event Support Hours requested in total are awaiting assignment for coverage.</inlineHelpText>
    <label>Total Remaining Hours pending to cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>