unpackaged/main/default/objects/Account/fields/Under_review__c.field-meta.xml
<CustomField>
    <fullName>Under_review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The account is being reviewed for deletion or merging.</description>
    <inlineHelpText>The account is being reviewed for deletion or merging.</inlineHelpText>
    <label>Under review?</label>
    <type>Checkbox</type>
</CustomField>